plugins {
    id 'com.android.library'
    id 'maven-publish'
}

group='com.github.yuzumone'

android {
    namespace = 'net.expandable'
    compileSdk = 37
    defaultConfig {
        minSdk = 16
    }
    buildTypes {
        release {
            minifyEnabled = false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
            all {
                jvmArgs += [
                        '--add-opens=java.base/java.lang=ALL-UNNAMED',
                        '--add-opens=java.base/java.util=ALL-UNNAMED',
                        '--add-opens=java.base/java.io=ALL-UNNAMED',
                        '--add-opens=java.base/java.net=ALL-UNNAMED',
                        '--add-opens=java.base/java.security=ALL-UNNAMED',
                        '--add-opens=java.base/java.text=ALL-UNNAMED',
                        '--add-opens=java.base/jdk.internal.access=ALL-UNNAMED',
                        '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED',
                        '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
                ]
            }
        }
    }
    publishing {
        singleVariant('release')
    }
}

dependencies {
    //noinspection GradleDependency
    api 'androidx.appcompat:appcompat:1.6.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.robolectric:robolectric:4.16.1'
}

afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release

                groupId = 'com.github.yuzumone'
                artifactId = 'expandabletextview'
                version = '0.3.3'
            }
        }
    }
}
